# lang-ai

./: README.md  pyproject.toml
lang_agent/: agent.py  config.py  prompt.py
lang_agent/sub_agents/conversation/: __init__.py  agent.py  prompt.py
lang_agent/sub_agents/exercise/: __init__.py  agent.py  prompt.py
lang_agent/sub_agents/teacher/: __init__.py  agent.py  prompt.py
