[project]
name = "voice-bot"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dynamic = ["version", "dependencies"]

[tool.poetry]
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
google-adk = "^1.17.0"
litellm = "^1.79.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

